Code optimizations and bump version number to 1.5.1